// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`causes styles with lint to log errors 1`] = `
<h1
  className="indextest__Title-bnge21-0 hMxMnR"
>
  Who wrote these styles anyway??
</h1>
`;

exports[`styles without lint log nothing 1`] = `
<h1
  className="indextest__Title-bnge21-1 jvejDF"
>
  Who wrote these styles anyway??
</h1>
`;
